Fix double borders on the normal (non-multi-row) grid

--- a/src/css/themes/bootstrap3/default/infragistics.theme.css
+++ b/src/css/themes/bootstrap3/default/infragistics.theme.css
@@ -3266,10 +3266,15 @@ body .ui-tooltip {
 .ui-iggrid th.ui-state-active.ui-state-hover .ui-icon {
   color: #222222;
 }
+/* BUG 246065 Marin Popov 23.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
 .ui-iggrid tbody td {
-  border-left: 1px solid transparent!important;
-  border-right: 1px solid transparent!important;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
 }
+.ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
+  border-right: 1px solid #ddd;
+}
+/* END 246065 */
 .ui-iggrid tbody td,
 .ui-iggrid thead .ui-iggrid-editingcell,
 .ui-iggrid tbody th.ui-iggrid-rowselector-class,
