--- a/src/css/themes/bootstrap3/default/modules/infragistics.ui.grid.less
+++ b/src/css/themes/bootstrap3/default/modules/infragistics.ui.grid.less
@@ -282,10 +282,16 @@
   color: @ui-icons-darker;
 }
 
+/* BUG 246065 Marin Popov 23.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
 .ui-iggrid tbody td {
-  border-left: 1px solid transparent!important;
-  border-right: 1px solid transparent!important;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
 }
+
+.ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable {
+  border-right: 1px solid @table-border-color;
+}
+/* END 246065 */
 
 .ui-iggrid tbody td,
 .ui-iggrid thead .ui-iggrid-editingcell,
